--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,7 +13,7 @@
    <div class="form-group">
     <input type="password" class="form-control" name="password">
        </div>
-    <button class="btn btn-lg btn-secondary btn-block" type>Login</button>
+    <button class="btn btn-lg btn-secondary btn-block" >Login</button>
     
 </form>
 <a href="{% provider_login_url  'google' %}" class="btn btn btn-danger btn-lg btn-block">Signin with google</a>
