--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class=" w3-col w3-container s4 m4 l4 w3-border-right">  
-<a href="http://127.0.0.1:8000/category/questions/"><img src="{% static 'answers.png' %}" style="width:35px;margin:auto;"></a>
+<a href="{% url 'category-list'  %}"><img src="{% static 'answers.png' %}" style="width:35px;margin:auto;"></a>
 
 </div>
 <div class="w3-col w3-container s4 m4 l4">  
@@ -52,7 +52,7 @@
 
 
 </div>
-
+{{user.category}} hi
  <br>
 
 
@@ -95,10 +95,9 @@
    <button type="submit"  name="follow_id" value="{{post.id}}" >Follow</button>
   
   </form>
+  &nbsp
   {{post.followers.count}}
  
-
-
 
 
    {% if user.is_authenticated %} 
@@ -143,10 +142,15 @@
     
     <form action="{% url 'like_post' post.pk %}"  method="POST">
       {% csrf_token %}
+      {% if liked %}
       
       <button type="submit"  name="post_id" value="{{post.id}}" ><img src="{% static 'like1.png' %}" style="width:20px;margin:auto;"></button>
+    {% else %}
+    <button type="submit"  name="post_id" value="{{post.id}}" ><img src="{% static 'like1.png' %}" style="width:20px;margin:auto;"></button>
+    {% endif %}
+
       {{post.likes.count}}
-      {{post.comment}}
+     
     </form>
 
   
@@ -172,6 +176,7 @@
 </div>
 <br>
 {% endfor %}
+
 
 
 
