--- a/templates/register.html
+++ b/templates/register.html
@@ -46,7 +46,7 @@
 
                
         <div class="flex justify-center mt-6">
-            <button class="w-2/3 px-6 py-3 leading-5 bg-green-500 hover:bg-green-800 text-white text-lg transition-colors duration-200 transform  rounded-md  focus:outline-none focus:bg-blue-600">Sign Up</button>
+            <button type="submit" class="w-2/3 px-6 py-3 leading-5 bg-green-500 hover:bg-green-800 text-white text-lg transition-colors duration-200 transform  rounded-md  focus:outline-none focus:bg-blue-600">Sign Up</button>
         </div>
        
         <div class="flex justify-between items-center mt-1">
