--- a/templates/home.html
+++ b/templates/home.html
@@ -122,7 +122,7 @@
 <div class="w3-container w3-padding"><h4><b>{{post.title}}</b></h4><h4>{{post.post_date}}</h4>
 
  
-<h3><a href="{% url 'article-detail'  post.pk %}">{{post.title_tag}}</a></h3><a href="{% url 'category' post.category|slugify %}">{{post.category}}</a></div>
+<h3><a href="{% url 'article-detail'  post.pk %}">{{post.title_tag}}</a></h3></div>
 <div class="w3-container">
 
   {% if post.header_image %}
