--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class=" w3-col w3-container s4 m4 l4 w3-border-right">  
-<a href="{% url 'home'  %}/category/questions"><img src="{% static 'answers.png' %}" style="width:35px;margin:auto;"></a>
+<a href="https://dacurate-forum.herokuapp.com/category/questions"><img src="{% static 'answers.png' %}" style="width:35px;margin:auto;"></a>
 
 </div>
 <div class="w3-col w3-container s4 m4 l4">  
