--- a/templates/home.html
+++ b/templates/home.html
@@ -124,7 +124,9 @@
  
 <h3><a href="{% url 'article-detail'  post.pk %}">{{post.title_tag}}</a></h3></div>
 <div class="w3-container">
-
+{% if post.category == 'questions' %}
+ <h4>{{post.body|body}}</h4>
+ {% endif %}
   {% if post.header_image %}
   <a href="{% url 'article-detail'  post.pk %}"><img src="media/{{post.header_image}}" style="width: 100%;"></a>
   {% else %}
