--- a/templates/register.html
+++ b/templates/register.html
@@ -55,6 +55,7 @@
         </div>
 
         <div class="flex justify-center mt-6">
+          <a href="{% provider_login_url  'google' %}" class="btn btn btn-danger btn-lg btn-block">Signin with google</a>
             <button class="w-2/3 px-6 py-3 leading-5 bg-red-500 hover:bg-green-800 text-white text-lg transition-colors duration-200 transform  rounded-md  focus:outline-none focus:bg-blue-600">Signup with Google</button>
         </div>
 
